Refactor query with ORM
 Add ORM relation
 Update query with ORM relation
 Update response with ORM query result
